# shinonome

./: .gitignore  README.rst  pyproject.toml
src/palette_emoji/: __init__.py  global_helpers.py  run.py
src/palette_emoji/internals/: task.py
